# label-server

./: .gitignore  README.md  Readme.md  config.yaml  config.yaml.example  pyproject.toml
docs/: Configuration.md  LabelTypes.md  Readme.md
labelServer/: app.py  config.py  database.py  webserver.py
labelServer/templates/: baseApp.html  dbIndex.html  findLabelForm.html  index.html  keywordSearchForm.html  keywordSearchResults.html  labelForm.html
scripts/: installEditableLabelServerCommand
